--- a/src/public/views/portfolio.ejs
+++ b/src/public/views/portfolio.ejs
@@ -4,6 +4,7 @@
     <title>Portfolio Page Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="../ts/getData.js" type="module" defer></script>
+    <script src="../ts/getCss.js" type="module" defer></script>
   </head>
   <body>
     <div class="container">
