--- a/src/public/views/styling.ejs
+++ b/src/public/views/styling.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style-preview-main.css" />
-    <script src="./ts/main.js" defer></script>
+    <script src="./ts/main.js" type="module" defer></script>
     <title>Style Preview</title>
   </head>
   <body>
@@ -16,7 +16,11 @@
     <main>
       <span id="numTemplates" style="display: none"><%= numTemplates %></span>
       <div id="main-content">
-        <div id="template-choices"></div>
+        <div id="template-choices">
+          <div id="view-portfolio-btn">
+            <button type="button" id="button">View Portfolio</button>
+          </div>
+        </div>
       </div>
     </main>
     <footer></footer>
