reconfigure file structure, ejs templating start

--- a/src/views/styling.ejs
+++ b/src/views/styling.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/client/css/style-preview-main.css" />
-    <script src="./ts/main.js" type="module" defer></script>
+    <script src="./js/main.js" type="module" defer></script>
     <title>Style Preview</title>
   </head>
   <body>
