--- a/src/views/partials/portf_template.ejs
+++ b/src/views/partials/portf_template.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>Portfolio Page Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="../ts/getData.js" type="module" defer></script>
+    <script src="/js/getData.js" type="module" defer></script>
   </head>
   <body>
     <div class="container">
