--- a/src/views/portfolio.ejs
+++ b/src/views/portfolio.ejs
@@ -3,8 +3,8 @@
   <head>
     <title>Portfolio Page Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/client/ts/getData.js" type="module" defer></script>
-    <script src="/client/ts/getCss.js" type="module" defer></script>
+    <script src="/js/getData.js" type="module" defer></script>
+    <script src="/js/getCss.js" type="module" defer></script>
   </head>
   <body>
     <div class="container">
